--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ p {background-color:yellow;}
     <a href="project2.html">It's bad being violent</a>
     <a href="project3.html">Solving Violence</a>
   </div>
-      <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/zYZjGQit3xkUHT0WLXmQ.jpg"width="400" height="220">
+      <img src="download (3).jpeg"width="400" height="220">
 <div class="images container">
 <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/2%20(1).png"width="400" height="220">
 <div class="images container">
