--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p {background-color:yellow;}
   </div>
       <img src="download (3).jpeg"width="400" height="220">
 <div class="images container">
-<img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/2%20(1).png"width="400" height="220">
+<img src="2 (1).png"width="400" height="220">
 <div class="images container">
 <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/solutions-community-violence.jpg"width="400" height="220">
 <div class="images container">
