--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ p {background-color:yellow;}
 <div class="images container">
 <img src="2 (1).png"width="400" height="220">
 <div class="images container">
-<img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/solutions-community-violence.jpg"width="400" height="220">
+<img src="solutions-community-violence.jpg"width="400" height="220">
 <div class="images container">
 <br>
 <style>
