--- a/project2.html
+++ b/project2.html
@@ -25,7 +25,7 @@ p {background-color:yellow;}
     </ul>
       <img src="images (1).jpeg"width="400" height="220"
 <div class="images container">
-<img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/download%20(4).jpeg"width="400" height="220"
+<img src="download (4).jpeg"width="400" height="220"
 <div class="images container">
 <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/images.jpeg"width="400" height="220"
 <div class="images container">
