--- a/project3.html
+++ b/project3.html
@@ -26,7 +26,7 @@
     <a href="project.html">Violence is bad</a>
     <a href="project2.html">It's bad being violent</a>
   </div>
-      <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/download%20(5).jpeg"width="400" height="220"
+      <img src="download (5).jpeg"width="400" height="220"
 <div class="images container">
 <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/10-ways-to-EVAW-hero.png"width="400" height="220"
 <div class="images container">
