--- a/project3.html
+++ b/project3.html
@@ -28,7 +28,7 @@
   </div>
       <img src="download (5).jpeg"width="400" height="220"
 <div class="images container">
-<img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/10-ways-to-EVAW-hero.png"width="400" height="220"
+<img src="10-ways-to-EVAW-hero.png"width="400" height="220"
 <div class="images container">
 <img src="file:///media/fuse/drivefs-ad071e216195b20c8407e79e05f94b37/root/images%20(2).jpeg"width="400" height="220"
 <div class="images container">
