--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@ p {background-color:yellow;}
     <a href="project2.html">It's bad being violent</a>
     <a href="project3.html">Solving Violence</a>
   </div>
+  <div class="row">
+  <div class="column">
       <img src="download (3).jpeg"width="400" height="220">
-<div class="images container">
+      </div>
+      <div class="column">
 <img src="2 (1).png"width="400" height="220">
-<div class="images container">
+          </div>
+          <div class="column">
 <img src="solutions-community-violence.jpg"width="400" height="220">
-<div class="images container">
+              </div>
+  </div>
 <br>
 <style>
 * {
