--- a/project2.html
+++ b/project2.html
@@ -23,12 +23,17 @@ p {background-color:yellow;}
       <li>Kidnapping</li>
       <li>E.T.C</li>
     </ul>
+    <div class="row">
+  <div class="column">
       <img src="images (1).jpeg"width="400" height="220"
-<div class="images container">
+                </div>
+          <div class="column">
 <img src="download (4).jpeg"width="400" height="220"
-<div class="images container">
+          </div>
+    <div class="column">
 <img src="images.jpeg"width="400" height="220"
-<div class="images container">
+          </div>
+        </div>
 <br>
 <div class="dropdown">
   <button class="dropbtn">Information</button>
