--- a/project3.html
+++ b/project3.html
@@ -26,12 +26,17 @@
     <a href="project.html">Violence is bad</a>
     <a href="project2.html">It's bad being violent</a>
   </div>
+      <div class="row">
+  <div class="column">
       <img src="download (5).jpeg"width="400" height="220"
-<div class="images container">
-<img src="10-ways-to-EVAW-hero.png"width="400" height="220"
-<div class="images container">
+          </div>
+          <div class="column">
+<img src="10-ways-to-EVAW-hero.png"width="400" height="220" 
+    </div>
+    <div class="column">
 <img src="images (2).jpeg"width="400" height="220"
-<div class="images container">
+    </div>
+  </div>
 <br>
 <style>
 p {background-color:yellow;}
