--- a/project2.html
+++ b/project2.html
@@ -23,17 +23,11 @@ p {background-color:yellow;}
       <li>Kidnapping</li>
       <li>E.T.C</li>
     </ul>
-    <div class="row">
-  <div class="column">
-      <img src="images (1).jpeg"width="400" height="220"
-                </div>
-          <div class="column">
-<img src="download (4).jpeg"width="400" height="220"
-          </div>
-    <div class="column">
-<img src="images.jpeg"width="400" height="220"
-          </div>
-        </div>
+    <div class="image container">
+      <img src="images (1).jpeg" alt="Unkown" width="400" height="220"/>
+<img src="download (4).jpeg" alt="Unkown(1)" width="400" height="220"/>
+<img src="images.jpeg" alt="Unkown(2)" width="400" height="220"/>
+  </div>
 <br>
 <div class="dropdown">
   <button class="dropbtn">Information</button>
